@@ -1,3 +1,11 @@
+2004-03-01  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/paper-score.cc (process): Output titles using make-title.
+
+	* scm/output-ps.scm (output-stencil): Display directly instead of
+	constructing string.
+	(make-title): New function.
+
 2004-03-01  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* Documentation/user/lilypond-book.itely (Integrating LaTeX and
